--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ permalink: "/:year/:month/:day/:title/"
 
 name: "Beyond Technically Correct"
 description: "Jeffrey Charles's technology blog"
-url: "http://www.beyondtechnicallycorrect.com"
+url: "https://www.beyondtechnicallycorrect.com"
 
 defaults:
   -
